# fedorc

./: README.md  pyproject.toml  train.py
src/fedorc/: __init__.py  aggregation.py  backbone.py  buffers.py  cli.py  config.py  data.py  evaluation.py  experiment.py  split.py  trainer.py
